# xgraph

./: .gdb_args  .gdb_history  .gitattributes  .gitignore  64bit_ascanf_pointers.txt  AIX_create_shared_lib.htm  AppleVecLib.h  CMakeLists.txt  CMaps.c  DataSet.h  Elapsed.h  FFT_source_link.txt  INSTALL.script.MacOSX  INSTALL.script.cygwin  LMC.ttxy  LegendsNLabels.c  LineCircle.c  LineCircleIntersct.nb  LocalWin.h  Macros.h  Make-xgraf  Makefile  Makefile-gcc  NaN.h  NewPrefs.sh  PostScript_Fonts  README  README.ANNOUNCE  README.GENERAL  README.HARDCOPY  README.INSTALL  README.ascanf  RGBlist.txt  ReadData.c  ReadData.h  SS.c  SS.h  SS_exact=1  Scatter  Sinc.h  (+189 more)
.kdev4/: XGraph_(CMake).kdev4  xgraph.kdev4
Antsearch4-valkyrie/: Antsearch4-Valkyrie.cfg
Import/: CBF.cfg  CSVio.c  GSRio.c  IEFio.c  VFR.cfg  gsr.h  ief.h
Make/: makexgraph.sgi
Python/: AscanfCall.c  CMakeLists.txt  Console.py  DM_Python.h  DataFrame.py  DataSet.c  PyObjects.h  Python.c  Python.c.old  Python2or3Header.h  PythonInterface.h  Python_headers.h  StrSink.py  TkConsole.py  TkConsole.py3k  TkConsoleX11.py  TkConsoleX11.py3k  ULabel.c  building_cython.txt  gtkcons-096.py  machdep  machdep_header  py2file.py  python23_numpy.h  python24_numpy.h  python25_numpy.h  python26_numpy.h  python27_numpy.h  python32_numpy.h  python_numpy.h.in  pythonsys_numpy.h  rjvbFilt.c  rjvbFilters.c  rjvbFilters.h  wxConsole.py
SparseHash/: readme
XGraph-1.moved-aside/: main.c
XGraph-106.docset/html/: Info.plist  Makefile  Nodes.xml  Tokens.xml  class_data_frame_1_1_data_frame.html  class_data_frame_1_1access2000.html  class_data_frame_1_1tab_sep-members.html  class_data_frame_1_1tab_sep.html  classconsole_1_1_console_redirect.html  classconsole_1_1wx_console-members.html  classconsole_1_1wx_console.html  classdense__hashtable-members.html  classdense__hashtable.html  classgtkcons-096_1_1_console.html  classgtkcons-096_1_1gtkoutfile.html  classsparse__hashtable-members.html  classvalue__alloc__type.html  hierarchy.html  index.html  struct_binary_field-members.html  struct_binary_field.html  struct_compiled___form.html  struct_compiled___python.html  struct_cursor___cross.html  struct_d_m___i_o___handler-members.html  struct_d_m___i_o___handler.html  struct_d_m___python___interface-members.html  struct_d_m___python___interface.html  struct_data_set.html  struct_data_window-members.html  struct_data_window.html  struct_discard_undo_buf.html  struct_dy_mod_auto_load_tables-members.html  struct_dy_mod_auto_load_tables.html  struct_dy_mod_dependency.html  struct_dy_mod_lists-members.html  struct_dy_mod_lists.html  struct_file_line_pos-members.html  struct_fit_history-members.html  struct_font_info_list.html  (+195 more)
XGraph-106.docset/html/fr.RJVB.XGraph.docset/Contents/Resources/: docSet.dsidx  docSet.skidx
XGraph-106.docset/html/fr.RJVB.XGraph.docset/Contents/Resources/Documents/: annotated.html  class_data_frame_1_1_data_frame-members.html  class_data_frame_1_1access2000-members.html  classconsole_1_1_console_redirect-members.html  classes.html  classgtkcons-096_1_1_console-members.html  classgtkcons-096_1_1gtkoutfile-members.html  classlibc__allocator__with__realloc-members.html  classlibc__allocator__with__realloc.html  classlibc__allocator__with__realloc_3_01void_01_4-members.html  classlibc__allocator__with__realloc_3_01void_01_4.html  classsparse__hashtable.html  struct_add___form___flags-members.html  struct_add___form___flags.html  struct_axis_values-members.html  struct_axis_values.html  struct_colour_function-members.html  struct_colour_function.html  struct_compiled___form-members.html  struct_compiled___python-members.html  struct_cursor___cross-members.html  struct_custom_font-members.html  struct_custom_font.html  struct_data_set-members.html  struct_discard_undo_buf-members.html  struct_double_or_int-members.html  struct_double_or_int.html  struct_extremes.html  (+188 more)
XGraph-106.docset/html/search/: all_62.html  all_6d.html  all_70.html  all_79.html  classes_64.html  classes_71.html  classes_74.html  classes_75.html  classes_76.html  classes_77.html  classes_78.html  search.js
XGraph-106.xcodeproj/: bertin.mode1v3  bertin.pbxuser  project.pbxproj
XGraph.xcodeproj/: bertin.mode1  bertin.mode1v3  bertin.pbxuser  project.pbxproj
XGraphMac.app/Contents/: Info.plist
XGraphMac.app/Contents/MacOS/: XGraphMac
XGraphMac.app/Contents/Resources/: Doc.icns  Scriptlet.icns  Scriptlet.sgui  prefs.plist
cmake_modules/: AddDymods.cmake
contrib/: MBF.c  convFFT_OSX.c  ddeltaNEC.c  fig_dist-old.c  fig_dist.c  fourconv.c  fourconv3.c  fourconvOSX.c  integrators.c  pearson_correl.c  simanneal.c  simanneal.h  splines.c
examples/: AntSearch4  MorBurr99P2.xg
man/: cut.1  ssp.1  xgraph.1
scripts/: .tcshrc.linux  CDD  CMaps.xg  README  X-plot  XGraph.sh  XY-plot  _obj_compress  _obj_uncompress  acroread  bzexe  c++opt  ccopt.domain  ccopt.hpux  ccopt.macII  ccopt.sgi  cmake  cxgetenv  cxsetenv  cxunsetenv  fig2ps2tex  filter  fkill  gcc_filter  gccopt  gccopt.aix  gccopt.aix.old  gccopt.cygwin  gccopt.cygwin.old  gccopt.hpux  gccopt.linuxX86  gccopt.linuxX86.old  gccopt.macII  gccopt.macosx  gccopt.macosx.old  gccopt.sgi  gccopt.sgi-irix5.3  gccopt.sgi.new  git-diff  gs_a4  (+43 more)
snprintf/: Makefile  snprintf-R162.c  snprintf1.1.c  vsnprintf-R162.c
snprintf_2.2/: Makefile
ux11/: CMakeLists.txt  Makefile  Makefile-gcc  copyright.h  machdepcomp  sources  ux11.doc  ux11.h  ux11_err.c  ux11_internal.h  ux11_open.c  ux11_stdarg.h  ux11f_gcvals.c  ux11f_hints.c  ux11f_image.c  ux11f_size.c  ux11f_watter.c  ux11f_xa.c  ux11g_value.c  ux11n_font.c  ux11n_visual.c  ux11s_vismap.c  ux11w_props.c
ux11/Make/: makeux11  makeux11.sgi  makeux11_sa
vscanf/: .gdb_history  Makefile  README  asscanf.c  make_archive.sh  tags  tstscanf.c  update_lib  vfscanf.c  vsnprintf.c  vsscanf.c  vsscanf_orig.c
xgraph.dSYM/Contents/: Info.plist
xtb/: CMakeLists.txt  Makefile  Makefile-gcc  cmake  xgALLOCA.h  xtb.c  xtb.h  xtb_disabled_bg  xtb_no_xgraph.c
xtb/Make/: makextb  makextb.sgi
(+11 files in other folders)
